# ros-node-interface

./: CMakeLists.txt  Citation.cff  Readme.md  package.xml  setup.py
include/ros-node-interface/: interface.hpp  utils.hpp
src/: interface.cpp  utils.cpp
src/ros-node-interface/: interface.py  utils.py
