<?xml version="1.0"?>
<package format="2">
  <name>ros_node_interface</name>
  <version>0.0.0</version>
  <description> ROS Package for Flir Multi Camera
  </description>

  <maintainer email="henrik.trommer@uni-goettingen.de">docker</maintainer>

  <license>Apachev2</license>

  <author email="henrik.trommer@uni-goettingen.de">Henrik Trommer</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>keiko_msgs</depend>

  <export>
  <!-- Other tools can request additional information be placed here -->
  </export>
</package>


